# internal/mail/delivery/handler.go
@@ -1,13 +1,13 @@
 package delivery
 
 import (
+	"fmt"
 	"github.com/go-park-mail-ru/2023_1_Seekers/internal/mail"
 	"github.com/go-park-mail-ru/2023_1_Seekers/internal/models"
 	"github.com/go-park-mail-ru/2023_1_Seekers/pkg"
 	_ "github.com/go-park-mail-ru/2023_1_Seekers/pkg/errors"
 	"github.com/gorilla/mux"
 	"net/http"
-	"strconv"
 )
 
 type delivery struct {
@@ -24,82 +24,21 @@ func handleMailErr(w http.ResponseWriter, r *http.Request, err error) {
 	pkg.HandleError(w, r, mail.Errors[err], err)
 }
 
-// GetInboxMessages godoc
-// @Summary      GetInboxMessages
-// @Description  List of incoming messages
-// @Tags     	 messages
-// @Accept	 application/json
-// @Produce  application/json
-// @Success  200 {object} models.InboxResponse "success get list of incoming messages"
-// @Failure 400 {object} errors.JSONError "failed to get user"
-// @Failure 400 {object} errors.JSONError "failed to get inbox messages"
-// @Failure 401 {object} errors.JSONError "failed auth"
-// @Failure 401 {object} errors.JSONError "failed get session"
-// @Router   /inbox/ [get]
-func (del *delivery) GetInboxMessages(w http.ResponseWriter, r *http.Request) {
-	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
-
-	if !ok {
-		handleMailErr(w, r, mail.ErrFailedGetUser)
-		return
-	}
-
-	messages, err := del.uc.GetIncomingMessages(userID)
-
-	if err != nil {
-		handleMailErr(w, r, mail.ErrFailedGetInboxMessages)
-		return
-	}
-
-	pkg.SendJSON(w, r, http.StatusOK, models.InboxResponse{
-		Messages: messages,
-	})
-}
-
-// GetOutboxMessages godoc
-// @Summary      GetOutboxMessages
-// @Description  List of outgoing messages
-// @Tags     	 messages
-// @Accept	 application/json
-// @Produce  application/json
-// @Success  200 {object} models.OutboxResponse "success get list of outgoing messages"
-// @Failure 400 {object} errors.JSONError "failed to get user"
-// @Failure 400 {object} errors.JSONError "failed to get outbox messages"
-// @Failure 401 {object} errors.JSONError "failed auth"
-// @Failure 401 {object} errors.JSONError "failed get session"
-// @Router   /outbox/ [get]
-func (del *delivery) GetOutboxMessages(w http.ResponseWriter, r *http.Request) {
-	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
-	if !ok {
-		handleMailErr(w, r, mail.ErrFailedGetUser)
-		return
-	}
-
-	messages, err := del.uc.GetOutgoingMessages(userID)
-	if err != nil {
-		handleMailErr(w, r, mail.ErrFailedGetOutboxMessages)
-		return
-	}
-
-	pkg.SendJSON(w, r, http.StatusOK, models.OutboxResponse{
-		Messages: messages,
-	})
-}
-
 // GetFolderMessages godoc
 // @Summary      GetFolderMessages
-// @Description  List of outgoing messages
+// @Description  List of folder messages
 // @Tags     	 messages
 // @Accept	 application/json
 // @Produce  application/json
-// @Param id path int true "FolderID"
-// @Success  200 {object} models.FolderResponse "success get list of outgoing messages"
+// @Param slug path string true "FolderSlug"
+// @Success  200 {object} models.FolderResponse "success get list of folder messages"
 // @Failure 400 {object} errors.JSONError "failed to get user"
+// @Failure 400 {object} errors.JSONError "failed to get folder"
 // @Failure 400 {object} errors.JSONError "failed to get folder messages"
 // @Failure 401 {object} errors.JSONError "failed auth"
 // @Failure 401 {object} errors.JSONError "failed get session"
 // @Failure 404 {object} errors.JSONError "invalid url address"
-// @Router   /folder/{id} [get]
+// @Router   /folder/{slug} [get]
 func (del *delivery) GetFolderMessages(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
 	if !ok {
@@ -107,30 +46,33 @@ func (del *delivery) GetFolderMessages(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	vars := mux.Vars(r)
-	folderID, err := strconv.ParseUint(vars["id"], 10, 64)
+	folderSlug, ok := vars["slug"]
 
-	if err != nil {
+	if !ok {
 		handleMailErr(w, r, mail.ErrInvalidURL)
 		return
 	}
 
-	folder, err := del.uc.GetFolderInfo(userID, folderID)
+	folder, err := del.uc.GetFolderInfo(userID, folderSlug)
 
 	if err != nil {
-		handleMailErr(w, r, mail.ErrFailedGetFolderMessages)
+		handleMailErr(w, r, mail.ErrFailedGetFolder)
 		return
 	}
 
-	messages, err := del.uc.GetFolderMessages(userID, folderID)
+	messages, err := del.uc.GetFolderMessages(userID, folderSlug)
 
 	if err != nil {
+		fmt.Println(err)
 		handleMailErr(w, r, mail.ErrFailedGetFolderMessages)
 		return
 	}
 
 	pkg.SendJSON(w, r, http.StatusOK, models.FolderResponse{
-		Folder:   *folder,
-		Messages: messages,
+		Folder:         *folder,
+		Messages:       messages,
+		MessagesUnseen: folder.MessagesUnseen,
+		MessagesCount:  folder.MessagesCount,
 	})
 }
 
@@ -152,7 +94,12 @@ func (del *delivery) GetFolders(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	folders := del.uc.GetFolders(userID)
+	folders, err := del.uc.GetFolders(userID)
+	if err != nil {
+		handleMailErr(w, r, mail.ErrFailedGetFolders)
+		return
+	}
+
 	pkg.SendJSON(w, r, http.StatusOK, models.FoldersResponse{
 		Folders: folders,
 	})
